--- a/public/pages/arena.html
+++ b/public/pages/arena.html
@@ -18,7 +18,11 @@
           <p id="goal">GOAL!</p>
           <p id="author"></p>
         </div>
-        <div id="scoreboard"><p id="score">0:0</p></div>
+        <div id="scoreboard">
+            <span id="homeColors"></span>
+            <p id="score">0:0</p>
+            <span id="awayColors"></span>
+        </div>
         <div id="gameArea">
           <div id="pitch">
             <div id="post"></div>
