--- a/public/pages/arena.html
+++ b/public/pages/arena.html
@@ -14,7 +14,7 @@
             <input id="inputMessage" type="text" maxlength="128" placeholder="Message"></input:>
         </div>
         <p id="ping"></p>
-        <i class="bi bi-fullscreen"></i>
+        <i id="fullscreen" class="bi bi-fullscreen"></i>
         <div id="goalOverlay" style="display: none;">
           <p id="goal">GOAL!</p>
           <p id="author"></p>
