--- a/public/pages/arena.html
+++ b/public/pages/arena.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="../css/arena.css">
 </head>
 <body>
+    <div id="loaderOverlay">
+        <span class="loader"></span>
+    </div>
     <div id="camera">
         <div class="chat-box">
             <ul class="chat-messages" id="chatMessages"></ul>
