--- a/public/pages/arena.html
+++ b/public/pages/arena.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>FZ</title>
+    <title>FZ: Futebol 2D Online</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../css/arena.css">
 </head>
@@ -36,7 +36,6 @@
     <div id="joy"></div>
     <div id="kick" style="display: none;"></div>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
     <script src="../js/joy.js"></script>
     <script src="../js/arena.js"></script>
 </body>
