--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
         main {
             display: flex;
             flex-direction: column;
+            width: 100%;
+            max-width: 768px;
             height: 100%;
             padding: 1rem;
             gap: 1rem;
