--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link rel="manifest" href="manifest.json" />
     <title>FZ: Futebol 2D Online</title>
     <style>
         * {
@@ -321,3 +322,4 @@
     </script>
 </body>
 </html>
+    
